# hw-fw_hacc2

./: .gitignore  CMakeLists.txt  ConfigData.h  ConfigManager.cpp  ConfigManager.h  Eeprom93C46.h  Eeprom93C46Core.cpp  Eeprom93C46Core.h  IdleAnimator.cpp  IdleAnimator.h  MacAddress93C46.cpp  MacAddress93C46.h  NetworkManager.cpp  NetworkManager.h  README.md  RGBLEDDriver.cpp  RGBLEDDriver.h  SSRDriver.cpp  SSRDriver.h  SerialController.cpp  SerialController.h  UDPController.cpp  UDPController.h  WS2812Driver.cpp  WS2812Driver.h  help_page.html  lwipopts.h  main.cpp  main.h  main_page.html  mbed_app.json  mbed_lib.json  version.h
hacc-sim/: README.md  app.py  requirements.txt  sim_data.json
hacc-sim/sim/: __init__.py  command_processor.py  gui.py  persist.py  state.py  udp_server.py
